# linkedin-parallel-scrape

./: README.md  pyproject.toml  requirements.txt
linkedin_scrape/: __init__.py  parallel_scraper.py  parse.py  scraper.py  search.py  search_scraper.py  utils.py
