[tool.poetry]
name = "linkedin-scrape"
version = "0.1.0"
description = ""
authors = ["Darsh <darsh@dxfactor.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
webdriver-manager = "^3.2.2"
parslepy = "^0.3.0"
jsonstreams = "^0.5.0"
beautifulsoup4 = "^4.9.3"
bs4 = "^0.0.1"
pandas = "^1.1.5"
joblib = "^0.17.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
